@@ -1,3 +1,11 @@
+2005-08-30	Benedikt Meurer <benny@xfce.org>
+
+	* terminal/terminal-widget.c: Add support for application/x-color drops.
+	* terminal/terminal-preferences-dialog.c,
+	  terminal/terminal-preferences.c, terminal/terminal-screen.c: Improve
+	  the selection and cursor color handling, based on a patch provided by
+	  Bernhard Walle <bernhard@bwalle.de>.
+
 2005-08-19	Benedikt Meurer <benny@xfce.org>
 
 	* autogen.sh, configure.in.in: Import framework changes from Thunar.
